Jsonviews en Swagger + refactor testing